Comments out unused button and code block
Comments out a button and an example code block to clean up the HTML and reduce distractions in the rendered output. Updates page title for consistency.

--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Tags Example</title>
+    <title>Basic HTML Tags </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
     </form>
 
     <!-- Button -->
-    <button type="button">Click Me</button>
+    <!-- <button type="button">Click Me</button> -->
 
     <!-- Inline Elements -->
     <span>This is a span element.</span>
@@ -97,11 +97,11 @@
 
     <!-- Code -->
     <pre>
-<code>
+<!-- <code>
 function helloWorld() {
     console.log("Hello, world!");
 }
-</code>
+</code> -->
     </pre>
 </body>
 </html>
